Chore: fix footer text-align

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -41,6 +41,7 @@
   position: relative;
   z-index: 1;
   margin-top: -2rem;
+  text-align: center;
 
   svg {
     width: 3rem;
